--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     </head>
     <body> 
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <h1>Olá mundo</h1>
+        <p>Aqui estará meu curriculo.</p>
     </body>
 </html>
