--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="shadow">
                         <div class="content">
-                            <a href="">
+                            <a href="https://github.com/KarenMascarenhasLourenco">
                                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
                                     alt="GitHub" />
                                 GitHub
