--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
         <nav>
             <ul>
                 <li><a href="#formacao">Education</a></li>
-                </li>
                 <li><a href="#tecnologias">Technology</a></li>
                 <li><a href="#projetos">Projects</a></li>
-                <li><a href="#">CV</a></li>
+                <li><a href="#curriculo">CV</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="slide" data-anchor="introduction" data-tooltip="Introduction" id="introduction">
+        <section id="introduction">
             <div class="intro-content">
                 <div>
                     <h2>Hey , my name is Karen Lourenço and I am a</h2>
@@ -58,16 +57,11 @@
                 <img src="./assets/code-prop.png" alt="">
             </div>
         </section>
-        <section class="slide" data-anchor="education" data-tooltip="Education" id="formacao" class='summary'>
+        <section id="formacao">
             <h2 class="education-heading">Education</h2>
-            <p class="blue-paragraph">Na Blue Edtech, tive a oportunidade de participar de um programa intensivo de
-                formação em
-                desenvolvimento full
-                stack,
-                onde aprendi as habilidades básicas de programação e as tecnologias mais utilizadas no mercado, como
-                JavaScript,
-                HTML,
-                CSS, React e Node.js.
+            <p class="blue-paragraph">At Blue Edtech, I had the opportunity to participate in an intensive full stack development training program, where I
+            learned the basic programming skills and the most used technologies in the market, such as JavaScript, HTML, CSS, React,
+            and Node.js.
             </p>
             <div class="shadow certificate-one">
                 <div class="content certificate">
@@ -80,14 +74,12 @@
                 </div>
             </div>
             <p class="alura-paragraph">
-                Já na Alura, complementei meu conhecimento com cursos especializados, como Práticas ágeis e SQL e
-                Gerenciamento de Estado com Redux. Esses cursos me permitiram desenvolver aplicações mais complexas
-                e interativas,
-                além
-                de melhorar minhas habilidades de programação.
+                At Alura, I complemented my knowledge with specialized courses, such as Agile Practices, SQL, and State Management with
+                Redux. These courses allowed me to develop more complex and interactive applications, as well as improve my programming
+                skills.
             </p>
         </section>
-        <section class="slide" data-anchor="technology" data-tooltip="Tecnology" id="tecnologias" class='summary'>
+        <section id="tecnologias">
             <h2 class="border">Technology</h2>
             <div class="base-tech">
                 <h3>Base</h3>
@@ -203,7 +195,7 @@
                 </div>
             </div>
         </section>
-        <section class="slide" data-anchor="Projects" data-tooltip="Projects" id="projetos" class='summary'>
+        <section id="projetos">
             <h2 class="border">Projects</h2>
             <div class="carousel-section">
                 <h3>Frontend Mentor - Newbie</h3>
@@ -704,8 +696,8 @@
                 </div>
             </div>
         </section>
-        <section class="slide" data-anchor="cv" data-tooltip="CV" id="curriculo" class='summary'>
-            <h2 class="border">Currículo</h2>
+        <section id="curriculo">
+            <h2 class="border">Curriculum Vitae</h2>
         </section>
     </main>
     <script src="script.js"></script>
