--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <nav>
             <ul>
+                <li><a href="#introduction">About</a></li>
                 <li><a href="#formacao">Education</a></li>
                 <li><a href="#tecnologias">Technology</a></li>
                 <li><a href="#projetos">Projects</a></li>
